; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/kernel/cpu/extr_hwblk.c___hwblk_mod_cnt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/kernel/cpu/extr_hwblk.c___hwblk_mod_cnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hwblk_info = type { %struct.hwblk* }
%struct.hwblk = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hwblk_info*, i32, i32, i32, i32)* @__hwblk_mod_cnt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__hwblk_mod_cnt(%struct.hwblk_info* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.hwblk_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.hwblk*, align 8
  store %struct.hwblk_info* %0, %struct.hwblk_info** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.hwblk_info*, %struct.hwblk_info** %6, align 8
  %13 = getelementptr inbounds %struct.hwblk_info, %struct.hwblk_info* %12, i32 0, i32 0
  %14 = load %struct.hwblk*, %struct.hwblk** %13, align 8
  %15 = load i32, i32* %7, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.hwblk, %struct.hwblk* %14, i64 %16
  store %struct.hwblk* %17, %struct.hwblk** %11, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load %struct.hwblk*, %struct.hwblk** %11, align 8
  %20 = getelementptr inbounds %struct.hwblk, %struct.hwblk* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %8, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, %18
  store i32 %26, i32* %24, align 4
  %27 = load %struct.hwblk*, %struct.hwblk** %11, align 8
  %28 = getelementptr inbounds %struct.hwblk, %struct.hwblk* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %8, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %10, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %45

36:                                               ; preds = %5
  %37 = load %struct.hwblk_info*, %struct.hwblk_info** %6, align 8
  %38 = load %struct.hwblk*, %struct.hwblk** %11, align 8
  %39 = getelementptr inbounds %struct.hwblk, %struct.hwblk* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @hwblk_area_mod_cnt(%struct.hwblk_info* %37, i32 %40, i32 %41, i32 %42, i32 %43)
  br label %45

45:                                               ; preds = %36, %5
  %46 = load %struct.hwblk*, %struct.hwblk** %11, align 8
  %47 = getelementptr inbounds %struct.hwblk, %struct.hwblk* %46, i32 0, i32 0
  %48 = load i32*, i32** %47, align 8
  %49 = load i32, i32* %8, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %48, i64 %50
  %52 = load i32, i32* %51, align 4
  ret i32 %52
}

declare dso_local i32 @hwblk_area_mod_cnt(%struct.hwblk_info*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
